# onchain-token-verification

./: .gitignore  .pre-commit-config.yaml  README.md  build_contracts.sh  pyproject.toml  requirements.txt
contracts/: build.sh
contracts/src/: register_authority_trust.py  register_token_mistrust.py  register_token_trust.py  util.py
onchain_token_verification/: cip68.py  contract_address.py  utils.py
onchain_token_verification/contracts/: authority_trust.py  cip68.py  register_authority_trust.py  register_token_mistrust.py  register_token_trust.py  token_mistrust.py  token_trust.py
onchain_token_verification/rest/: querier.py  server.py  util.py
onchain_token_verification/scripts/: create_key_pair.py  register_authority_trust.py  withdraw_authority_trust.py
onchain_token_verification/server/: querier.py
onchain_token_verification/smart_voucher/: muesliswap_pool_verifier.py
