[tool.poetry]
name = "onchain_token_verification"
version = "0.1.0"
description = "The Smart Contract backed token verification, developed by MuesliSwap"
authors = ["MuesliSwapTeam <muesliswap@googlemail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
opshin = "0.14.1"
click = "^8.1.3"
flask = "^2.3.2"
flask_cors = "^3.0.10"
flask_caching = "^2.0.2"
gelidum = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
